--- a/frontend/src/components/Contact.css
+++ b/frontend/src/components/Contact.css
@@ -1,4 +1,4 @@
-#contact-item {
+#contact-items {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   align-items: center;
@@ -8,7 +8,7 @@
   border-bottom: 2px solid #666;
 }
 
-#contact-item:hover {
+#contact-items:hover {
   cursor: pointer;
   background-color: #666;
 }
