--- a/frontend/src/components/Contact.css
+++ b/frontend/src/components/Contact.css
@@ -1,14 +1,19 @@
-#contact-items {
+#contact-section {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   align-items: center;
-  max-width: 700px;
+  max-width: 75rem;
   margin: auto;
   padding: 0.2rem 0.4rem;
   border-bottom: 2px solid #666;
+  font-size: large;
 }
 
-#contact-items:hover {
+#contact-section:hover {
   cursor: pointer;
   background-color: #666;
+}
+
+#contact-items {
+  font-size: 20px;
 }
