--- a/frontend/src/components/Contact.css
+++ b/frontend/src/components/Contact.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   align-items: center;
-  max-width: 75rem;
+  max-width: 1000px;
   margin: auto;
   padding: 0.2rem 0.4rem;
   border-bottom: 2px solid #666;
@@ -16,4 +16,10 @@
 
 #contact-items {
   font-size: 20px;
+}
+
+#edit-button {
+  width: 5rem;
+  height: 2rem;
+  font-size: medium;
 }
